--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        <%= title %>
+        {{ title }}
     </title>
     <link rel="stylesheet" href="/components/semantic/dist/semantic.min.css">
     <link rel="stylesheet" href="stylesheets/style.css">
@@ -17,7 +17,7 @@
     <h1 class="ui center aligned icon header">
         <i class="code icon"></i>
         <div class="content">
-            <%= title %>
+            {{ title }}
             <div class="sub header">
                 Example Application
             </div>
@@ -27,7 +27,7 @@
     <div class="ui container">
         <p>
             Welcome to
-            <%= title %>
+            {{ title }}
         </p>
         <button class="ui primary button">Hello World!</button>
     </div>
