added header image to article

--- a/views/article.hbs
+++ b/views/article.hbs
@@ -9,8 +9,11 @@
     <script src="../components/semantic/dist/semantic.min.js"></script>
 </head>
 
+    <img src={{article.image}}>
+    <br>
+    <br>
     <div class="ui text container">
-        <h2 class="ui header">{{article.title}}</h2>
+        <h1 class="ui header">{{article.title}}</h1>
         <div class="ui horizontal list" id="sub-header">
             <div class="item">
                 <div class="content">
